# exercise_cmake

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
src/: demo1.h  demo2.h  demo3.h  main.cc
